--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,7 @@
 # Copy this file to .env and update the values
 
 # MongoDB Connection String
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/TaskManagementApp?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://your-username:your-password@your-cluster.mongodb.net/TaskManagementApp?retryWrites=true&w=majority&appName=Cluster0
 
 # JWT Secret Key (change this in production!)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
